proxy server enabled

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 		<title>Collection Navigation Harness</title>
 	</head>
 	<body>
-		<div id="root"></div>
+		<div id="O365_NavHeader"><div class="o365cs-nav-centerAlign"></div></div>
 	</body>
 </html>
