--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Collection Navigation Harness</title>
-	</head>
-	<body>
-		<div id="O365_NavHeader"><div class="o365cs-nav-centerAlign"></div></div>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Collection Navigation Harness</title>
+    <script type="text/javascript" src="_layouts/15/init.js"></script>
+    <script type="text/javascript">
+      _spPageContextInfo = {
+        webAbsoluteUrl: 'http://localhost:8081',
+        siteAbsoluteUrl: 'http://localhost:8081',
+        webTitle: 'Collection Navigation Harness',
+      }
+    </script>
+    <script
+      type="text/javascript"
+      src="_layouts/15/1033/initstrings.js"
+    ></script>
+    <script type="text/javascript" src="_layouts/15/1033/strings.js"></script>
+    <script type="text/javascript" src="_layouts/15/MicrosoftAjax.js"></script>
+    <script type="text/javascript" src="_layouts/15/sp.core.js"></script>
+    <script type="text/javascript" src="_layouts/15/sp.runtime.js"></script>
+    <script type="text/javascript" src="_layouts/15/sp.js"></script>
+  </head>
+  <body>
+    <div id="O365_NavHeader"><div class="o365cs-nav-centerAlign"></div></div>
+  </body>
 </html>
